<resources>
    <string name="app_name">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="app_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_mail">Dimmar90@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search">Поиск</string>
    <string name="empty_search">Ничего не нашлось</string>
    <string name="connection_error_message">Проблемы со связью</string>
    <string name="extra_connection_error_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_update">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="empty_description">NULL</string>
    <string name="media">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_media_message">Ваша медиатека пуста</string>
    <string name="playlists_button_message">Новый плейлист</string>
    <string name="empty_playlist_message">Вы не создали\nни одного плейлиста</string>
    <string name="add_to_playlist_message">Добавить в плейлист</string>
    <string name="add_playlist_button">Новый плейлист</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_neutral_button">Отмена</string>
    <string name="dialog_positive_button">Завершить</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create_playlist_button">Создать</string>
    <string name="playlist">Плейлист</string>
    <string name="create">создан</string>
    <string name="track">трек</string>
    <string name="tracks">треков</string>
    <string name="tracks1">трека</string>
    <string name="track_already_added">Трек уже добавлен в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="minutes">минут</string>
    <string name="share_empty_playlist_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_message">Хотите удалить плейлист</string>
    <string name="no">нет</string>
    <string name="yes">да</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="empty_tracks_message">В этом плейлисте нет треков</string>
</resources>