<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackGroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <LinearLayout style="@style/SettingsLayoutStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/return_button"
            style="@style/SettingsReturnButtonStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:outlineProvider="none"
            app:icon="@drawable/vector"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="@dimen/return_button_frame_size" />

        <TextView
            style="@style/SettingsTextStyle"
            android:layout_width="208dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:text="@string/app_settings"
            android:textSize="@dimen/primary_text_size"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsLayoutStyle"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/SettingsMessageTextStyle"
            android:text="@string/dark_theme" />

        <Switch
            android:id="@+id/themeSwitcher"
            style="@style/SettingsIconStyle" />

    </LinearLayout>

    <LinearLayout style="@style/SettingsLayoutStyle">

        <TextView
            style="@style/SettingsMessageTextStyle"
            android:text="@string/share_app" />

        <TextView
            android:id="@+id/sharing_button"
            style="@style/SettingsIconStyle"
            app:drawableEndCompat="@drawable/share_icon" />
    </LinearLayout>

    <LinearLayout style="@style/SettingsLayoutStyle">

        <TextView
            style="@style/SettingsMessageTextStyle"
            android:text="@string/support" />

        <TextView
            android:id="@+id/support_button"
            style="@style/SettingsIconStyle"
            app:drawableEndCompat="@drawable/support_icon" />
    </LinearLayout>

    <LinearLayout style="@style/SettingsLayoutStyle">

        <TextView
            style="@style/SettingsMessageTextStyle"
            android:text="@string/terms_of_use" />

        <TextView
            android:id="@+id/terms_of_use"
            style="@style/SettingsIconStyle"
            app:drawableEndCompat="@drawable/vector_icon" />
    </LinearLayout>

</LinearLayout>