<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_layout"
    android:orientation="vertical"

    android:paddingHorizontal="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_text_size" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/button_search"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconSize="@dimen/primary_text_size"
            app:iconTint="@color/black"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/button_media"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/media_icon"
            app:iconGravity="textStart"
            app:iconSize="@dimen/primary_text_size"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/button_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/settings_icon"
            app:iconGravity="textStart"
            app:iconSize="@dimen/primary_text_size"
            app:iconTint="@color/black" />

    </LinearLayout>

</LinearLayout>