<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        style="@style/GuideLineStyle"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        style="@style/GuideLineStyle"
        app:layout_constraintGuide_end="24dp" />

    <ImageButton
        android:id="@+id/player_return_button"
        style="@style/PlayerReturnButtonStyle"
        android:contentDescription="@string/empty_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/track_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_return_button">

        <ImageView
            android:id="@+id/track_artwork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/empty_description"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/placeholder_icon" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/song_title"
        style="@style/TrackNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:textSize="@dimen/primary_text_size"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_cover"
        tools:text="song title" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/TrackNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/song_title"
        tools:text="artist title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_track_button"
        style="@style/PlayMusicButton"
        android:contentDescription="@string/empty_description"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_to_media_button"
        style="@style/PlayerButton"
        android:contentDescription="@string/empty_description"
        app:icon="@drawable/add_to_media_button_icon"
        app:layout_constraintBottom_toBottomOf="@id/play_track_button"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/play_track_button"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_like_button"
        style="@style/PlayerButton"
        android:contentDescription="@string/empty_description"
        app:icon="@drawable/add_like_button_icon"
        app:layout_constraintBottom_toBottomOf="@id/play_track_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/play_track_button"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

    <TextView
        android:id="@+id/player_time"
        style="@style/TrackNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="12.33dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="0:30"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/play_track_button" />

    <TextView
        android:id="@+id/duration"
        style="@style/TitleStyle"
        android:layout_marginTop="30dp"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_time" />

    <TextView
        android:id="@+id/track_duration"
        style="@style/TrackTitleStyle"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_time"
        tools:text="track_duration" />

    <TextView
        android:id="@+id/collectionName"
        style="@style/TitleStyle"
        android:text="@string/album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration" />

    <TextView
        android:id="@+id/track_collectionName"
        style="@style/TrackTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_duration"
        tools:text="track_collectionName" />

    <TextView
        android:id="@+id/releaseDate"
        style="@style/TitleStyle"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectionName" />

    <TextView
        android:id="@+id/track_releaseDate"
        style="@style/TrackTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_collectionName"
        tools:text="track_releaseDate" />

    <TextView
        android:id="@+id/primaryGenreName"
        style="@style/TitleStyle"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

    <TextView
        android:id="@+id/track_primaryGenreName"
        style="@style/TrackTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_releaseDate"
        tools:text="track_primaryGenreName" />

    <TextView
        android:id="@+id/country"
        style="@style/TitleStyle"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primaryGenreName" />

    <TextView
        android:id="@+id/track_country"
        style="@style/TrackTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_primaryGenreName"
        tools:text="track_country" />

</androidx.constraintlayout.widget.ConstraintLayout>