<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/BackGroundStyle"
    android:layout_height="match_parent"
    tools:context="com.practicum.playlistmaker.media.ui.PlaylistCreatorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/new_playlist_layout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <ImageButton
                android:id="@+id/return_button_from_playlist"
                style="@style/ReturnButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/title"
                style="@style/SearchTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:text="@string/new_playlist"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_playlist_cover_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_playlist_layout"
            android:gravity="center_horizontal"
            android:paddingTop="26dp">

            <ImageView
                android:id="@+id/playlist_cover"
                android:layout_width="312dp"
                android:layout_height="312dp"
                android:background="@drawable/playlist_cover_border"
                android:src="@drawable/empty_playlist_cover" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playlist_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_playlist_cover_layout"
            android:paddingTop="32dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_name"
                style="@style/PlaylistCreatorFieldStyle"
                android:hint="@string/playlist_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playlist_name_layout"
            android:paddingTop="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_description"
                style="@style/PlaylistCreatorFieldStyle"
                android:hint="@string/playlist_description_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/create_button_layout"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/create_playlist_button"
                style="@style/CreatePlaylistButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/addPlaylistButton_diactivate_color"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/create_playlist_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>